<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/other">

        <item
            android:id="@+id/nav_score"
            android:icon="@drawable/ic_score_white_24dp"
            android:title="@string/nav_my_score"
            app:actionViewClass="android.widget.TextView" />

        <item
            android:id="@+id/nav_collect"
            android:icon="@drawable/ic_collect_white_24dp"
            android:title="@string/nav_my_collect" />

        <item
            android:id="@+id/nav_question"
            android:icon="@drawable/ic_question_white_24dp"
            android:title="@string/nav_question" />

        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/ic_todo_white_24dp"
            android:title="@string/nav_todo" />

        <item
            android:id="@+id/nav_square"
            android:icon="@drawable/ic_square_white_24dp"
            android:title="@string/nav_square" />

        <item
            android:id="@+id/nav_night_mode"
            android:icon="@drawable/ic_night_white_24dp"
            android:title="@string/nav_night_mode" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting_white_24dp"
            android:title="@string/nav_setting" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_white_24dp"
            android:title="@string/nav_about_us" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_white_24dp"
            android:title="@string/nav_logout"
            android:visible="false"/>

    </group>

</menu>