<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wan.android.ui.home.HomeFragment"
        android:label="@string/tab_1"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_system"
        android:name="com.wan.android.ui.system.SystemListFragment"
        android:label="@string/tab_2"
        tools:layout="@layout/fragment_system_list" />

    <fragment
        android:id="@+id/navigation_official"
        android:name="com.wan.android.ui.tab.TabFragment"
        android:label="@string/tab_3"
        tools:layout="@layout/fragment_tab">
        <argument
            android:name="type"
            android:defaultValue="20"
            app:argType="integer"
            app:nullable="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_navigation"
        android:name="com.wan.android.ui.navigation.NavigationFragment"
        android:label="@string/tab_4"
        tools:layout="@layout/fragment_system_list" />

    <fragment
        android:id="@+id/navigation_project"
        android:name="com.wan.android.ui.tab.TabFragment"
        android:label="@string/tab_5"
        tools:layout="@layout/fragment_tab">
        <argument
            android:name="type"
            android:defaultValue="10"
            app:argType="integer"
            app:nullable="false" />
    </fragment>

</navigation>