<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.wan.android.bean.CoinInfo" />

    </data>

    <LinearLayout
        android:id="@+id/nav_view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="36dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/avatar_width"
            android:layout_height="@dimen/avatar_height"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_default_avatar"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:hint="@string/go_login"
            android:text="@{data.username}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_id"
                android:textColor="@color/Grey100"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(data.userId)}"
                android:textColor="@color/Grey100"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/nav_grade"
                android:textColor="@color/Grey100"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_user_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/nav_line_2"
                android:text="@{String.valueOf(data.level)}"
                android:textColor="@color/Grey100"
                android:textColorHint="@color/Grey100"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:text="@string/nav_rank"
                android:textColor="@color/Grey100"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_user_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/nav_line_2"
                android:text="@{String.valueOf(data.rank)}"
                android:textColor="@color/Grey100"
                android:textColorHint="@color/Grey100"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>
</layout>
